--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
     btn.addEventListener('click',()=>{
-        let dice = Math.floor(Math.random() * 6 +1)
+        let dice = Math.floor(Math.random() * 6 +1);
         btn.innerHTML = dice;
     })
     
